@@ -300,9 +300,6 @@
   cursor: default;
 }
 
-
-.comment_count {font-weight: bold;}
-
 .few-comments .comment_count,
 .add-comment .comment_count {display: none;}
 
